# codelab-core-service

./: .env.example  .gitignore  CHANGELOG_DUPLICATE_EVENTS_FIX.md  CHANGELOG_LLM_ERROR_HANDLING.md  CHANGELOG_MESSAGE_EVENTS.md  CHANGELOG_V0.2.0.md  CLEANUP_COMPLETION_REPORT.md  CODE_ANALYSIS_REPORT.md  Dockerfile  IMPLEMENTATION_PRIORITY_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  INFRASTRUCTURE_COMPLETE.md  LICENSE  Makefile  OPENSPEC_UPDATE_REQUIREMENTS.md  OPENSPEC_VERIFICATION_REPORT.md  PROJECT_INITIALIZATION_FLOW.md  PROJECT_MANAGEMENT_ENDPOINTS.md  PROJECT_MODEL_DATABASE_ANALYSIS.md  QUICKSTART.md  README.md  RELEASE_SPECIFICATION_V0.2.0.md  SQLALCHEMY_LAZY_LOADING_FIX_REPORT.md  USER_WORKER_SPACE_ARCHITECTURE_ANALYSIS.md  USER_WORKER_SPACE_IMPLEMENTATION_PLAN.md  VERIFICATION_ORCHESTRATOR_IMPLEMENTATION.md  WORKSPACE_RESPONSIBILITY_SEPARATION.md  alembic.ini  coverage.xml  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  test.md
.github/: INFRASTRUCTURE_SUMMARY.md
app/: __init__.py  config.py  database.py  dependencies.py  logging_config.py  main.py  qdrant_client.py  redis_client.py
doc/: CHANGELOG_WORKSPACE_ARCHITECTURE.md  CHANGELOG_WORKSPACE_ARCHITECTURE_CLARIFICATION.md  DOCUMENTATION_AUDIT_2026_02_18.md  INDEX.md  MIGRATION_SSE_TO_STREAMING.md  MIGRATION_V0.2.0.md  ORCHESTRATOR_ARCHITECTURE_AUDIT.md  ORCHESTRATOR_MODEL_DESIGN_ANALYSIS.md  ORCHESTRATOR_UNIFIED_AGENT_IMPLEMENTATION_PLAN.md  TEAM_ANNOUNCEMENT_WORKSPACE_ARCHITECTURE.md  WORKSPACE_ARCHITECTURE_REVIEW.md  agent-context.md  agent-tools-workflow.md  bugfix-agent-config-validation.md  bugfix-duplicate-events.md  bugfix-message-events.md  infrastructure-setup.md  litellm-integration.md  llm-error-handling.md  rest-api.md  samples.md  setup-guide.md  sse-event-streaming.md  techincal-requrements.md  tool-risk-assessment-matrix.md  идемпотентность-надежность.md
migrations/: env.py
monitoring/: prometheus.yml
openspec/: config.yaml
plans/: agent-tools-system-detailed-phases.md  agent-tools-system-implementation.md  implementation-stages-detailed-plan.md  orchestrator-architecture-final.md  v0.2.0-release-plan.md
scripts/: GRADIO_CLIENT.md  README.md  generate_test_jwt.py  gradio_ui.py  init_db.py  requirements-gradio.txt  test_duplicate_prevention.py  test_gradio_ui.py  test_message_events.py  test_sse_client.py  test_sse_full.py
tests/: README.md  TEST_AGENTS_API.md  TEST_REPORT.md  conftest.py  test_agent_bus_cleanup.py  test_agents_api.py  test_analytics_api.py  test_chat_api.py  test_create_project_with_starter_pack.py  test_documentation.py  test_event_outbox.py  test_idempotency.py  test_observability.py  test_orchestrator_routing.py  test_outbox_publisher.py  test_project_agents.py  test_project_chat.py  test_sse.py  test_streaming_integration.py  test_tool_command_validator.py  test_tool_path_validator.py  (+3 more)
(+125 files in other folders)
